--- a/Inicio sesión/index.html
+++ b/Inicio sesión/index.html
@@ -13,17 +13,23 @@
             <h1>Log in</h1>
         </div>
         <div class="formulario">
-            <form>
-                <h3> Usuario</h3>
-                <input class="input__1" type="Username" id="Username" name="Username">
-                <h3>Conraseña</h3>
-                <input class="input__1" type="password" id="password" name="password">
-                <br>
-                <input class="button" type="button" 
-                value="entar">
-            </form>
-            <p class="link_troll"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">¿Contraseña olvidada?</a></p>
+            <div class="formulario__div">
+                <form>
+                    <h4> Usuario</h4>
+                    <input class="input__1" type="Username" id="Username" name="Username" placeholder="">
+                    <h4>Conraseña</h4>
+                    <input class="input__1" type="password" id="password" name="password">
+                    <br>
+                    <input class="button" type="button" 
+                    value="Sign in">
+                </form>
+            </div>
+            <br>
+            <div>
+                <p class="link_troll"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">¿Contraseña olvidada?</a></p>
+            </div>
         </div>
+
        
        
     </div>
