--- a/Inicio sesión/index.html
+++ b/Inicio sesión/index.html
@@ -15,13 +15,18 @@
         <div class="formulario">
             <div class="formulario__div">
                 <form>
-                    <h4> Usuario</h4>
-                    <input class="input__1" type="Username" id="Username" name="Username" placeholder="">
-                    <h4>Conraseña</h4>
-                    <input class="input__1" type="password" id="password" name="password">
+                    <!--<h4> Usuario</h4>-->
+                    <input class="input__1" type="Username" id="Username" name="Username" placeholder="Username">
+                    <!--<h4>Conraseña</h4>-->
+                    <input class="input__1" type="password" id="password" name="password" placeholder="pasword" >
                     <br>
+                    <a class="remember_me">Remember me</a>
+                    <input class="user_remember" type="checkbox">
+                    
+                     <br>
                     <input class="button" type="button" 
                     value="Sign in">
+                   
                 </form>
             </div>
             <br>
