--- a/Inicio sesión/index.html
+++ b/Inicio sesión/index.html
@@ -14,17 +14,17 @@
         </div>
         <div class="formulario">
             <div class="formulario__div">
-                <form>
+                <form method="get" action="welcome.html">
                     <!--<h4> Usuario</h4>-->
-                    <input class="input__1" type="Username" id="Username" name="Username" placeholder="Username">
+                    <input class="input__1" type="Username" id="Username" name="Username" placeholder="Username" required>
                     <!--<h4>Conraseña</h4>-->
-                    <input class="input__1" type="password" id="password" name="password" placeholder="pasword" >
+                    <input class="input__1" type="password" id="password" name="password" placeholder="Password" required >
                     <br>
                     <a class="remember_me">Remember me</a>
                     <input class="user_remember" type="checkbox">
                     
                      <br>
-                    <input class="button" type="button" 
+                    <input class="button" type="submit" 
                     value="Sign in">
                    
                 </form>
