--- a/selección_subscripción/index.html
+++ b/selección_subscripción/index.html
@@ -14,18 +14,25 @@
     <div class="planes">
         <div class="Plan_1">
             <div class="head_plan"><h3>Basic</h3></div>
-            <div class="descripción"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat qui vel culpa doloribus ad minima repudiandae quis nemo, quas ducimus inventore quod consequuntur at numquam maxime adipisci iste molestiae laudantium.</p></div>
+            <div class="head_box__plan1"></div>
+            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3</p></div>
             <div class="Precio">10€/mes</div>
+
+            <div class="Precio_box__1"></div>
         </div>
         <div class="Plan_2">
             <div class="head_plan"><h3>Medium</h3></div>
-            <div class="descripción"><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet blanditiis praesentium perspiciatis ab, nemo consequatur modi iusto quas ipsa magnam expedita recusandae fugiat repellat, similique a eum necessitatibus? Fuga, cum.</p></div>
+            <div class="head_box__plan2"></div>
+            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3<br><b>·</b> Punto 4</p></div>
             <div class="Precio">15€/mes</div>
+            <div class="Precio_box__2"></div>
         </div>
         <div class="Plan_3">
             <div class="head_plan"><h3>Premium</h3></div>
-            <div class="descripción"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis iure repellat fugit, aspernatur ratione, laudantium minus sapiente blanditiis minima aliquid amet officia suscipit illum incidunt voluptas, aliquam doloribus rerum nihil.</p></div>
+            <div class="head_box__plan3"></div>
+            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3<br><b>·</b> Punto 4<br><b>·</b> Punto 5<br><b>·</b> Punto 6</p></div>
             <div class="Precio">25€/mes</div>
+            <div class="Precio_box__3"></div>
         </div>
     </div>
 </body>
