acttualización de diseño

--- a/selección_subscripción/index.html
+++ b/selección_subscripción/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="titulo">
         <h1>Selecciona tu plan</h1>
-        <p>Elije el plan que mejor se adecuae a tus necesidades.</p>
+        <p>Elije el plan que mejor se adecue a tus necesidades.</p>
     </div>
     <div class="planes">
         <div class="Plan_1">
