--- a/selección_subscripción/index.html
+++ b/selección_subscripción/index.html
@@ -11,26 +11,48 @@
         <h1>Selecciona tu plan</h1>
     </div>
     <div class="planes">
-        <div class="Plan_1">
-            <div class="head_plan"><h3>Basic</h3></div>
-            <div class="head_box__plan1"></div>
-            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3</p></div>
-            <div class="Precio">10€/mes</div>
-            <div class="Precio_box__1"></div>
+        <div class="plan">
+            <h3 class="head_box head_box__plan1">
+                Basic
+            </h3>
+            <ul class="descripción Plan_1">
+                <li>Punto 1</li>
+                <li>Punto 2</li>
+                <li>Punto 3</li>
+            </ul>
+            <div class="Precio_box__1 precio_box">
+                10€/mes
+            </div>
         </div>
-        <div class="Plan_2">
-            <div class="head_plan"><h3>Medium</h3></div>
-            <div class="head_box__plan2"></div>
-            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3<br><b>·</b> Punto 4</p></div>
-            <div class="Precio">15€/mes</div>
-            <div class="Precio_box__2"></div>
+        <div class="plan">
+            <h3 class="head_box head_box__plan2">
+                Medium
+            </h3>
+            <ul class="descripción Plan_2">
+                <li>Punto 1</li>
+                <li>Punto 2</li>
+                <li>Punto 3</li>
+                <li>Punto 4</li>
+            </ul>
+            <div class="Precio_box__2 precio_box">
+                15€/mes
+            </div>
         </div>
-        <div class="Plan_3">
-            <div class="head_plan"><h3>Premium</h3></div>
-            <div class="head_box__plan3"></div>
-            <div class="descripción"><p><b>·</b> Punto 1 <br><b>·</b> Punto 2<br><b>·</b> Punto 3<br><b>·</b> Punto 4<br><b>·</b> Punto 5<br><b>·</b> Punto 6</p></div>
-            <div class="Precio">25€/mes</div>
-            <div class="Precio_box__3"></div>
+        <div class="plan">
+            <h3 class="head_box head_box__plan3">
+                Premium
+            </h3>
+            <ul class="descripción Plan_3">
+                <li>Punto 1</li>
+                <li>Punto 2</li>
+                <li>Punto 3</li>
+                <li>Punto 4</li>
+                <li>Punto 5</li>
+                <li>Punto 6</li>
+            </ul>
+            <div class="Precio_box__3 precio_box">
+                25€/mes
+            </div>
         </div>
     </div>
 </body>
